# toolmate

./: .gitignore  Makefile  README.md  config.py  pyproject.toml
.github/workflows/: CI.yml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: add_tool.html  base.html  edit_tool.html  index.html  login.html  my_tools.html  registration.html  tool_details.html
migrations/versions/: 1268a174fd6b_add_category_to_tools.py  98b22c2af93d_fix_migration_tracking.py  a92911962cfc_add_category_and_is_available_to_tool.py
scripts/: render-pug.js  render-scripts.js
tests/: conftest.py  test_auth.py  test_filters.py  test_rental.py  test_tools.py
