[tool.poetry]
name = "tool-rental"
version = "0.1.0"
description = ""
authors = ["katiridium"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.5"
flask = "^3.1.0"
flake8 = "^7.1.1"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.37"
python-dotenv = "^1.0.1"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
werkzeug = "^3.1.3"
email-validator = "^2.2.0"
requests = "^2.32.3"
flask-migrate = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
